# composez-core

./: .gitignore  .nojekyll  CLAUDE.md  CNAME  README.md  index.html  pyproject.toml  pytest.ini  robots.txt  search.json  sitemap.xml
composez_core/: __init__.py  agent_runner.py  claude_md.py  config.py  db.py  exporter.py  importer.py  narrative_map.py  novel_coder.py  novel_commands.py  novel_context_prompts.py  novel_prompts.py  vale_linter.py
composez_core/server/: __init__.py  __main__.py  app.py
design/: cloud-multiuser-evaluation.html
docs/: _quarto.yml  index.qmd  styles.scss
docs/design/: cloud-multiuser-evaluation.md
docs/guide/: agent-mode.qmd  configuration.qmd  getting-started.qmd  import-export.qmd  installation.qmd  modes.qmd  narrative-structure.qmd  prose-linting.qmd  quickstart.qmd  reference-database.qmd  writing-workflow.qmd
docs/reference/: commands.qmd  composez-config.qmd  management-commands.qmd  navigation-commands.qmd  project-layout.qmd  writing-commands.qmd
guide/: agent-mode.html  configuration.html  getting-started.html  import-export.html  installation.html  modes.html  narrative-structure.html  prose-linting.html  quickstart.html  reference-database.html  writing-workflow.html
reference/: commands.html  composez-config.html  management-commands.html  navigation-commands.html  project-layout.html  writing-commands.html
requirements/: requirements-dev.in
site_libs/bootstrap/: bootstrap-23fccfcfca8cee0bf96e69e7fc482265.min.css
site_libs/quarto-html/: quarto-syntax-highlighting-1871b682d9c5d5dfd46107c2554e6de8.css
tests/composez_core/: test_agent.py  test_auto_context.py  test_autonomy.py  test_claude_md.py  test_copy_context.py  test_db.py  test_exporter.py  test_importer.py  test_narrative_map.py  test_novel_coder.py  test_novel_commands.py  test_selection.py  test_server_file_tree.py  test_server_handle_command.py  test_task_models.py  test_vale_linter.py
tests/composez_core/fixtures/novelcrafter/: codex.html  novel.md
tests/composez_core/fixtures/novelcrafter/characters/elias-thorne-39xgnblLOpR8zBvrlSaOxty57bX/: entry.md  metadata.json  notes.md
tests/composez_core/fixtures/novelcrafter/chats/: 2026-02-21 39xiv9D6.md  2026-02-21 39xjbYgG.md  2026-02-21 39xkQG1X.md
tests/composez_core/fixtures/novelcrafter/locations/the-rookery-archive-39xhJt55AqqUc2yFmXpbUfNI8Uv/: entry.md  metadata.json
tests/composez_core/fixtures/novelcrafter/lore/the-ink-debt-39xhsswC7aOWqyMefXEU4YIuwHs/: entry.md  metadata.json
tests/composez_core/fixtures/novelcrafter/snippets/: 2026-02-21 stubborn - 39xiPvvW.md  2026-02-21 vault - 39xiWKoE.md
(+6 files in other folders)
